--- a/react-burger/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/react-burger/src/components/burger-ingredients/burger-ingredients.module.css
@@ -1,3 +1,24 @@
-.selection_header{
-    margin-bottom: 40px;
+.selection_header {
+  margin-bottom: 40px;
+}
+
+.card_container {
+  display: flex;
+  height: calc(100vh - 30vh);
+  list-style: none;
+  flex-wrap: wrap;
+  overflow-y: auto;
+  margin: 0;
+}
+
+.card_container::-webkit-scrollbar {
+  width: 14px;
+}
+.card_container::-webkit-scrollbar-track {
+  background: #19191c;
+}
+.card_container::-webkit-scrollbar-thumb {
+  background: #af5eaa;
+  border: 3px solid #19191c;
+  border-radius: 7px;
 }
