added patchUserData to ProfilePage

--- a/react-burger/src/pages/profile/profile.module.css
+++ b/react-burger/src/pages/profile/profile.module.css
@@ -25,6 +25,15 @@
   width: 100%;
 }
 
+.buttonsContainer {
+  display: flex;
+}
+
+.buttonsContainer button{
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .container_navigate {
   width: 320px;
 }
