--- a/react-burger/src/components/ingredient-details/ingredient-details.module.css
+++ b/react-burger/src/components/ingredient-details/ingredient-details.module.css
@@ -1,10 +1,18 @@
-.root {
+.root_modal {
   display: flex;
   flex-direction: column;
   align-items: center;
   max-width: 520px;
   width: 100%;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.root_page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 500px;
 }
 
 .root h4 {
