--- a/react-burger/src/components/order-details/order-details.module.css
+++ b/react-burger/src/components/order-details/order-details.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   max-width: 520px;
-  width: 100%;
+  width: 600px;
   margin: 0 auto;
   flex: 1;
 }
