--- a/react-burger/src/components/ingredient-details/ingredient-details.module.css
+++ b/react-burger/src/components/ingredient-details/ingredient-details.module.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 520px;
-  width: 100%;
+  max-width: 720px;
+  width: 720px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -21,7 +21,7 @@
 
 .info {
   display: flex;
-  width: 100%;
+  width: 520px;
 }
 
 .infoItem {
