--- a/react-burger/src/components/modal/modal.module.css
+++ b/react-burger/src/components/modal/modal.module.css
@@ -11,13 +11,13 @@
 .header {
   display: flex;
   align-items: center;
-  height: 60px;
-  width: 600px;
+  height: 30px;
+  width: 100%;
 }
 
 .header h2 {
   margin: 0;
-  margin-top: 3vh;
+  align-items: center;
   margin-left: 2vw;
 }
 
