--- a/react-burger/src/components/order-details/order-details.module.css
+++ b/react-burger/src/components/order-details/order-details.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 520px;
+  max-width: 600px;
   width: 600px;
   margin: 0 auto;
   flex: 1;
@@ -12,4 +12,10 @@
   text-align: center;
   color: #F2F2F3;
   text-shadow: 0 0 10px #af5eaa;
+}
+
+.loading {
+  justify-content: center;
+  text-align: center;
+  height: 520px;
 }
